# Telegram-Shop-Bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __init__.py  bot.py
bot/db/: models.py
bot/handlers/: __init__.py  commands.py
bot/web/: server.py
tests/: test_bot.py
